crates/macros/tests/fail/fixed-layout/non-sized-fixed-layout.rs
fn main() {
    mem_markers::fixed_layout::ensure::<&str>();
}
